before devise and user authentication

--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -12,3 +12,10 @@ company03:
  name: Company 03
 springen:
  name: Bhakti Marga
+routenet:
+ name: Routenet LTD
+bennythejudge:
+ name: BennyTheJudge LTD
+shellco:
+ name: Shell Corporation
+ 
