--- a/test/fixtures/works.yml
+++ b/test/fixtures/works.yml
@@ -16,4 +16,11 @@ work_<%= n %>:
    datetimeperformed: <%= Time.now - n.days %> 
    hours: 8
 <% end %>
+<% 10.times do |n| %>
+work_<%= n %>:
+   project: <%= n>5 ? 'proj03' : 'proj04' %>
+   user: <%= n>5 ? 'user03' : 'user04' %>
+   datetimeperformed: <%= Time.now - n.days %> 
+   hours: 8
+<% end %>
 
