--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,6 +9,7 @@ user01:
     lname: surname01
     company: company01
     email: email@email.com
+    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 user02:
    fname: marco
    lname: rossi
