--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -14,29 +14,29 @@ user02:
    fname: marco
    lname: rossi
    company: company01
-   email: blabla@gmail.com
+   email: blabla1@gmail.com
    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 user03:
    fname: giovanni
    lname: bianchi
    company: company02
-   email: blabla@gmail.com
+   email: blabla2@gmail.com
    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 user04:
    fname: laura
    lname: marroni
    company: company03
-   email: blabla@gmail.com
+   email: blabla3@gmail.com
    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 user05:
    fname: maria
    lname: bianchi
    company: company02
-   email: blabla@gmail.com
+   email: blabla4@gmail.com
    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 ben:
    fname: benedetto
    lname: lo giudice
    company: springen
-   email: blabla@me.com
+   email: blabla5@me.com
    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
