--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,33 +10,39 @@ user01:
     company: company01
     email: m253ou@gmail.com
     encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+    admin_role: true
 user02:
    fname: marco
    lname: rossi
    company: company01
    email: blabla1@gmail.com
    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+   admin_role: false
 user03:
    fname: giovanni
    lname: bianchi
    company: company02
    email: blabla2@gmail.com
    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+   admin_role: true
 user04:
    fname: laura
    lname: marroni
    company: company03
    email: blabla3@gmail.com
    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+   admin_role: false
 user05:
    fname: maria
    lname: bianchi
    company: company02
    email: blabla4@gmail.com
    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+   admin_role: false
 ben:
    fname: benedetto
    lname: lo giudice
    company: springen
    email: blabla5@me.com
    encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+   admin_role: false
